--- a/css/bbhub.css
+++ b/css/bbhub.css
@@ -291,6 +291,9 @@ hr.white {
 .btn-info {
   font-size: 1.2em;
 }
+.top-nav {
+  margin-top: 15px;
+}
 .bb-onc-header {
   height: 80px;
   padding: 15px;
@@ -306,7 +309,7 @@ hr.white {
   margin-top: 0;
 }
 .bb-onc-header .top-nav {
-  padding-top: 0;
+  padding-top: 8px;
 }
 .bb-onc-header .top-nav li a {
   color: #fff;
@@ -575,6 +578,8 @@ li.active .box-link-rapper {
 }
 .provider-list {
   padding-right: 0px;
+  height: 290px;
+  overflow-y: auto;
 }
 .no-data {
   margin-top: -10px;
