--- a/css/bbhub.css
+++ b/css/bbhub.css
@@ -291,6 +291,10 @@ hr.white {
 .btn-info {
   font-size: 1.2em;
 }
+.alert.alert-slim {
+  padding: 5px;
+  margin-bottom: 0;
+}
 .top-nav {
   margin-top: 15px;
 }
@@ -581,6 +585,10 @@ li.active .box-link-rapper {
   height: 290px;
   overflow-y: auto;
 }
+.provider-list.nav-pills>li>a {
+  font-size: 16px;
+  line-height: 1.3em;
+}
 .no-data {
   margin-top: -10px;
   padding-left: 10px;
@@ -626,4 +634,8 @@ li.active .box-link-rapper {
   padding: 0 15px 15px;
   margin-left: -15px;
   margin-right: -15px;
+}
+.offerings ul>li {
+  font-size: 16px;
+  padding-bottom: 7px;
 }
