updates as of morning Oct. 30

--- a/css/bbhub-combined.css
+++ b/css/bbhub-combined.css
@@ -498,6 +498,7 @@ h1,
 h2,
 .h2,
 .sub-title,
+.alt-use a,
 .splash-section .splash-title h1 {
   color: #0070bb;
 }
@@ -800,7 +801,7 @@ body {
   margin-top: 0;
 }
 .bb-onc-header .top-nav {
-  padding-top: 8px;
+  padding-top: 2px;
 }
 .bb-onc-header .top-nav li a {
   color: #fff;
@@ -830,6 +831,9 @@ body {
   max-width: 620px;
   margin-right: auto;
   margin-left: auto;
+}
+.alt-use a {
+  text-decoration: underline;
 }
 .share-blurb {
   margin-top: 32px;
@@ -1255,4 +1259,7 @@ li.active .box-link-rapper {
 }
 .partners-lists-container {
   margin-bottom: 35px;
+}
+.app-coming-soon {
+  font-size: 5em;
 }
