--- a/css/bbhub-combined.css
+++ b/css/bbhub-combined.css
@@ -780,6 +780,26 @@ li.active .box-link-rapper {
 .box-link-rapper .start-here {
   margin-top: 2px;
 }
+@media screen and (max-width: 767px) {
+  .box-link-rapper {
+    text-align: left;
+    padding-left: 65px;
+    margin-bottom: 10px;
+    height: auto;
+  }
+  .box-link-rapper i {
+    font-size: 36px;
+    position: absolute;
+    left: 30px;
+    top: 0px;
+  }
+  .box-link-rapper i.insurance-icon {
+    top: 20px;
+  }
+  .box-link-rapper h3 {
+    margin-top: 10px;
+  }
+}
 .use-records-description,
 .app-disclaimer {
   margin: 40px 0;
@@ -804,23 +824,40 @@ li.active .box-link-rapper {
 .nav-pills>li.active>a:focus {
   background-color: #25c2dc;
 }
+#select-provider-wrapper {
+  min-height: 250px;
+}
 .providers {
   padding: 20px 10px;
   border-top: solid 5px #25c2dc;
 }
 .provider-list {
   padding-right: 0px;
-  height: 290px;
-  overflow-y: auto;
 }
 .provider-list.nav-pills>li>a {
   font-size: 16px;
   line-height: 1.3em;
 }
+.provider-list.nav-pills>li>a.highlight {
+  background-color: #ccc;
+}
+.provider-search-wrapper {
+  margin-bottom: 10px;
+  margin-top: 6px;
+  border-top: solid 1px #e4e6ea;
+}
 .no-data {
-  margin-top: -10px;
-  padding-left: 10px;
+  margin-top: 0px;
+  padding-left: 20px;
   border-left: solid 1px #959dac;
+}
+@media screen and (max-width: 767px) {
+  .no-data {
+    border-left: none;
+    padding-left: 0px;
+    margin-top: 15px;
+    border-top: solid 1px #474b5a;
+  }
 }
 .view-profile-btn {
   text-decoration: underline;
@@ -832,7 +869,7 @@ li.active .box-link-rapper {
   padding: 0 15px;
 }
 .not-listed-learn-more {
-  margin-top: 20px;
+  text-decoration: underline;
 }
 .get-records-wrapper-link {
   padding-right: 40px;
