--- a/css/bbhub-combined.css
+++ b/css/bbhub-combined.css
@@ -240,6 +240,9 @@ li,
 .body-text {
   font-size: 14px;
 }
+.fs-xxsmall {
+  font-size: 12px;
+}
 .fw-strong,
 h1,
 .h1,
@@ -274,6 +277,9 @@ h4,
 .title-description,
 .main-nav a {
   font-weight: 200;
+}
+.td-underline {
+  text-decoration: underline;
 }
 h1,
 .h1,
@@ -365,6 +371,9 @@ html,
 body {
   width: auto !important;
   overflow-x: hidden !important;
+}
+body.modal-open {
+  margin-right: 0px;
 }
 .btn {
   -webkit-border-radius: 0;
@@ -522,12 +531,12 @@ img.little-logo {
   background-color: #fff;
 }
 .splash-section .splash-img-wrapper {
-  height: 262px;
+  height: 280px;
   position: relative;
   background-color: #3c9ed2;
   background-image: url("../img/splash-bg-prog.jpg");
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: bottom center;
 }
 @media all and (-webkit-min-device-pixel-ratio:1.5),(min--moz-device-pixel-ratio:1.5),(-o-min-device-pixel-ratio:1.5/1),(min-device-pixel-ratio:1.5),(min-resolution:138dpi),(min-resolution:1.5dppx) {
   .splash-section .splash-img-wrapper {
@@ -719,14 +728,6 @@ img.little-logo {
   color: #fff;
   width: 100%;
 }
-.section.footer {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background-color: #e4e6ea;
-}
-.section.footer .meta-links {
-  color: #959dac;
-}
 .img-subtext {
   font-weight: normal;
   line-height: 1.2em;
@@ -801,7 +802,11 @@ li.active .box-link-rapper {
     margin-top: 10px;
   }
 }
-.use-records-description,
+.use-records-description {
+  color: #25c2dc;
+  border-bottom: none;
+  padding-bottom: 8px;
+}
 .app-disclaimer {
   margin: 40px 0;
 }
@@ -943,4 +948,17 @@ ul.additional-features-list li {
 }
 .profile-img {
   width: 400px;
+}
+.section.footer {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: #e4e6ea;
+}
+.section.footer p {
+  margin-top: 8px;
+  padding-left: 5px;
+  line-height: 1.4em;
+}
+.footer-links > li {
+  padding-bottom: 10px;
 }
